# wincs

./: Cargo.toml
examples/cloud-mirror/src/: main.rs
examples/sftp/: Cargo.toml
examples/sftp/src/: main.rs
src/: error.rs  lib.rs
src/filter/: sync_filter.rs
